# python_101_bootcamp

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
lectures/: welcome.ipynb
lectures/week_1_datatypes/: week_1_exercises.ipynb  week_1_lecture.ipynb
lectures/week_2_flow_control/: jakobs_beste_vrienden.csv  main_file.py  test_imports.py  test_imports_with_main.py  week_2_exercises.ipynb  week_2_lecture.ipynb
lectures/week_3_operators/: week_3_exercises.ipynb  week_3_lecture.ipynb
lectures/week_4_code_communication/: docstrings_example.py  week_4_excercises.ipynb  week_4_lecture.ipynb
lectures/week_5_functions/: week_5_excercises.ipynb  week_5_lecture.ipynb
lectures/week_6_classes/: week_6_excercises.ipynb  week_6_lecture.ipynb
lectures/week_7_developer_setup/: type_check_test.py  week_7_excercises.ipynb  week_7_lecture.ipynb
lectures/week_8_beautiful_code/: week_8_lecture.ipynb
