[project]
name = "sparo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.5"
dependencies = [
    "ipykernel>=6.29.5",
    "mypy>=1.15.0",
    "nbformat>=5.10.4",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "polars>=1.21.0",
    "pre-commit>=4.1.0",
    "pydantic>=2.10.6",
    "retry>=0.9.2",
    "ruff>=0.9.4",
]

[tool.ruff]
line-length = 120
